# odoo-hack

./: .gitignore  01_database_claude.md  02_backend_claude.md  04_project_rules_claude.md  README.md  implementation_plan.md
backend/: fix.py  pyproject.toml  seed_firestore.py
backend/src/: main.py
backend/src/application/dtos/: allocations.py  assets.py  audits.py  base.py  bookings.py  dashboard.py  departments.py  employees.py  maintenance.py  resources.py  roles.py
backend/src/application/services/: asset_allocation_service.py  asset_service.py  audit_log_service.py  audit_service.py  dashboard_service.py  department_service.py  employee_service.py  maintenance_service.py  notification_service.py  resource_service.py  role_service.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/config/: settings.py
backend/src/domain/: enums.py
backend/src/domain/entities/: asset.py  asset_allocation.py  asset_category.py  audit_cycle.py  audit_log_entry.py  base_entity.py  counter.py  dashboard_aggregate.py  department.py  employee.py  maintenance_request.py  notification.py  permission.py  resource_booking.py  role.py  shared_resource.py
backend/src/domain/repositories/: asset_allocation_repository.py  asset_category_repository.py  asset_repository.py  (+13 more)
backend/src/shared/: constants.py  errors.py  logging.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_endpoints.py
backend/tests/integration/: test_firestore_emulator.py
backend/tests/unit/: test_errors.py  test_feature_routes.py  test_validation.py
(+63 files in other folders)
